--- a/html/ui/locales/it.json
+++ b/html/ui/locales/it.json
@@ -471,6 +471,7 @@
     "decrypting": "Decriptando...",
     "leased_soon": "Tra poco in leasing",
     "downloaded_volume": "Volume scaricato",
+	"connectionType": "Connection",
     "balance_is_leased_out": "Il saldo effettivo del tuo conto è dato in leasing a partire dal blocco __start__ fino al blocco __end__ al conto <a href='#' data-user='__account__' class='user_info'> __account__<\/a>",
     "last_block": "Ultimo blocco",
     "tentative": "Tentativo",
