--- a/html/ui/locales/fr.json
+++ b/html/ui/locales/fr.json
@@ -471,6 +471,7 @@
     "decrypting": "Déchiffrement en cours...",
     "leased_soon": "Le bail sera bientôt effectif",
     "downloaded_volume": "Volume de données téléchargé",
+	"connectionType": "Connection",
     "balance_is_leased_out": "Le solde effectif de votre compte sera baillé au compte <a href='#' data-user='__account__' class='user_info'>__account__<\/a> à compter du bloc __start__ et ce jusqu'au bloc __end__",
     "last_block": "Dernier bloc",
     "tentative": "Provisoire",
