--- a/html/ui/locales/id.json
+++ b/html/ui/locales/id.json
@@ -471,6 +471,7 @@
     "decrypting": "Mendekripsi...",
     "leased_soon": "Segera Disewakan",
     "downloaded_volume": "Volume yang telah diunduh",
+	"connectionType": "Connection",
     "balance_is_leased_out": "Saldo efektif anda disewakan mulai dari blok __start__ sampai blok __end__ ke rekening <a href='#' data-user='__account__' class='user_info'> __account__<\/a>",
     "last_block": "Blok terakhir",
     "tentative": "Tentatif",
