--- a/html/ui/locales/pt.json
+++ b/html/ui/locales/pt.json
@@ -471,6 +471,7 @@
     "decrypting": "Decifrando...",
     "leased_soon": "Alugado em breve",
     "downloaded_volume": "Volume Descarregado",
+	"connectionType": "Connection",
     "balance_is_leased_out": "O saldo efetivo da sua conta alugará-se a partir do bloco __start__ até o bloco __end__ para a conta <a href='#' data-user='__account__' class='user_info'> __account__<\/a>",
     "last_block": "Último Bloco",
     "tentative": "Tentativa",
