--- a/html/ui/locales/sk.json
+++ b/html/ui/locales/sk.json
@@ -471,6 +471,7 @@
     "decrypting": "Dešifrujem...",
     "leased_soon": "Prenajaté čoskoro",
     "downloaded_volume": "Stiahnutý objem",
+	"connectionType": "Connection",
     "balance_is_leased_out": "Efektívny zostatok vášho účtu je prenajatý od bloku __start__ do bloku __end__ na účet <a href='#' data-user='__account__' class='user_info'> __account__<\/a>",
     "last_block": "Posledný blok",
     "tentative": "Nezáväzne",
